syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "JetSetGo.RecommodationSystem.Grpc";

message GetRecommodationReqest{string id =1;}
message getRecommodationsResponse{string response =1;}